// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metrics queries with a service node name fetches cpu chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "processCPUAverage": Object {
        "avg": Object {
          "field": "system.process.cpu.total.norm.pct",
        },
      },
      "processCPUMax": Object {
        "max": Object {
          "field": "system.process.cpu.total.norm.pct",
        },
      },
      "systemCPUAverage": Object {
        "avg": Object {
          "field": "system.cpu.total.norm.pct",
        },
      },
      "systemCPUMax": Object {
        "max": Object {
          "field": "system.cpu.total.norm.pct",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "processCPUAverage": Object {
            "avg": Object {
              "field": "system.process.cpu.total.norm.pct",
            },
          },
          "processCPUMax": Object {
            "max": Object {
              "field": "system.process.cpu.total.norm.pct",
            },
          },
          "systemCPUAverage": Object {
            "avg": Object {
              "field": "system.cpu.total.norm.pct",
            },
          },
          "systemCPUMax": Object {
            "max": Object {
              "field": "system.cpu.total.norm.pct",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "term": Object {
              "service.node.name": "bar",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with a service node name fetches heap memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "heapMemoryCommitted": Object {
        "avg": Object {
          "field": "jvm.memory.heap.committed",
        },
      },
      "heapMemoryMax": Object {
        "avg": Object {
          "field": "jvm.memory.heap.max",
        },
      },
      "heapMemoryUsed": Object {
        "avg": Object {
          "field": "jvm.memory.heap.used",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "heapMemoryCommitted": Object {
            "avg": Object {
              "field": "jvm.memory.heap.committed",
            },
          },
          "heapMemoryMax": Object {
            "avg": Object {
              "field": "jvm.memory.heap.max",
            },
          },
          "heapMemoryUsed": Object {
            "avg": Object {
              "field": "jvm.memory.heap.used",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "term": Object {
              "service.node.name": "bar",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with a service node name fetches memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "memoryUsedAvg": Object {
        "avg": Object {
          "script": Object {
            "lang": "painless",
            "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
          },
        },
      },
      "memoryUsedMax": Object {
        "max": Object {
          "script": Object {
            "lang": "painless",
            "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
          },
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "memoryUsedAvg": Object {
            "avg": Object {
              "script": Object {
                "lang": "painless",
                "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
              },
            },
          },
          "memoryUsedMax": Object {
            "max": Object {
              "script": Object {
                "lang": "painless",
                "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
              },
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "term": Object {
              "service.node.name": "bar",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "exists": Object {
              "field": "system.process.cgroup.memory.mem.usage.bytes",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with a service node name fetches non heap memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "nonHeapMemoryCommitted": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.committed",
        },
      },
      "nonHeapMemoryMax": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.max",
        },
      },
      "nonHeapMemoryUsed": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.used",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "nonHeapMemoryCommitted": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.committed",
            },
          },
          "nonHeapMemoryMax": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.max",
            },
          },
          "nonHeapMemoryUsed": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.used",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "term": Object {
              "service.node.name": "bar",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with a service node name fetches thread count chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "threadCount": Object {
        "avg": Object {
          "field": "jvm.thread.count",
        },
      },
      "threadCountMax": Object {
        "max": Object {
          "field": "jvm.thread.count",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "threadCount": Object {
            "avg": Object {
              "field": "jvm.thread.count",
            },
          },
          "threadCountMax": Object {
            "max": Object {
              "field": "jvm.thread.count",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "term": Object {
              "service.node.name": "bar",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with service_node_name_missing fetches cpu chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "processCPUAverage": Object {
        "avg": Object {
          "field": "system.process.cpu.total.norm.pct",
        },
      },
      "processCPUMax": Object {
        "max": Object {
          "field": "system.process.cpu.total.norm.pct",
        },
      },
      "systemCPUAverage": Object {
        "avg": Object {
          "field": "system.cpu.total.norm.pct",
        },
      },
      "systemCPUMax": Object {
        "max": Object {
          "field": "system.cpu.total.norm.pct",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "processCPUAverage": Object {
            "avg": Object {
              "field": "system.process.cpu.total.norm.pct",
            },
          },
          "processCPUMax": Object {
            "max": Object {
              "field": "system.process.cpu.total.norm.pct",
            },
          },
          "systemCPUAverage": Object {
            "avg": Object {
              "field": "system.cpu.total.norm.pct",
            },
          },
          "systemCPUMax": Object {
            "max": Object {
              "field": "system.cpu.total.norm.pct",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "bool": Object {
              "must_not": Array [
                Object {
                  "exists": Object {
                    "field": "service.node.name",
                  },
                },
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with service_node_name_missing fetches heap memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "heapMemoryCommitted": Object {
        "avg": Object {
          "field": "jvm.memory.heap.committed",
        },
      },
      "heapMemoryMax": Object {
        "avg": Object {
          "field": "jvm.memory.heap.max",
        },
      },
      "heapMemoryUsed": Object {
        "avg": Object {
          "field": "jvm.memory.heap.used",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "heapMemoryCommitted": Object {
            "avg": Object {
              "field": "jvm.memory.heap.committed",
            },
          },
          "heapMemoryMax": Object {
            "avg": Object {
              "field": "jvm.memory.heap.max",
            },
          },
          "heapMemoryUsed": Object {
            "avg": Object {
              "field": "jvm.memory.heap.used",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "bool": Object {
              "must_not": Array [
                Object {
                  "exists": Object {
                    "field": "service.node.name",
                  },
                },
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with service_node_name_missing fetches memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "memoryUsedAvg": Object {
        "avg": Object {
          "script": Object {
            "lang": "painless",
            "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
          },
        },
      },
      "memoryUsedMax": Object {
        "max": Object {
          "script": Object {
            "lang": "painless",
            "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
          },
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "memoryUsedAvg": Object {
            "avg": Object {
              "script": Object {
                "lang": "painless",
                "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
              },
            },
          },
          "memoryUsedMax": Object {
            "max": Object {
              "script": Object {
                "lang": "painless",
                "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
              },
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "bool": Object {
              "must_not": Array [
                Object {
                  "exists": Object {
                    "field": "service.node.name",
                  },
                },
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "exists": Object {
              "field": "system.process.cgroup.memory.mem.usage.bytes",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with service_node_name_missing fetches non heap memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "nonHeapMemoryCommitted": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.committed",
        },
      },
      "nonHeapMemoryMax": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.max",
        },
      },
      "nonHeapMemoryUsed": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.used",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "nonHeapMemoryCommitted": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.committed",
            },
          },
          "nonHeapMemoryMax": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.max",
            },
          },
          "nonHeapMemoryUsed": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.used",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "bool": Object {
              "must_not": Array [
                Object {
                  "exists": Object {
                    "field": "service.node.name",
                  },
                },
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries with service_node_name_missing fetches thread count chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "threadCount": Object {
        "avg": Object {
          "field": "jvm.thread.count",
        },
      },
      "threadCountMax": Object {
        "max": Object {
          "field": "jvm.thread.count",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "threadCount": Object {
            "avg": Object {
              "field": "jvm.thread.count",
            },
          },
          "threadCountMax": Object {
            "max": Object {
              "field": "jvm.thread.count",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "bool": Object {
              "must_not": Array [
                Object {
                  "exists": Object {
                    "field": "service.node.name",
                  },
                },
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries without a service node name fetches cpu chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "processCPUAverage": Object {
        "avg": Object {
          "field": "system.process.cpu.total.norm.pct",
        },
      },
      "processCPUMax": Object {
        "max": Object {
          "field": "system.process.cpu.total.norm.pct",
        },
      },
      "systemCPUAverage": Object {
        "avg": Object {
          "field": "system.cpu.total.norm.pct",
        },
      },
      "systemCPUMax": Object {
        "max": Object {
          "field": "system.cpu.total.norm.pct",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "processCPUAverage": Object {
            "avg": Object {
              "field": "system.process.cpu.total.norm.pct",
            },
          },
          "processCPUMax": Object {
            "max": Object {
              "field": "system.process.cpu.total.norm.pct",
            },
          },
          "systemCPUAverage": Object {
            "avg": Object {
              "field": "system.cpu.total.norm.pct",
            },
          },
          "systemCPUMax": Object {
            "max": Object {
              "field": "system.cpu.total.norm.pct",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries without a service node name fetches heap memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "heapMemoryCommitted": Object {
        "avg": Object {
          "field": "jvm.memory.heap.committed",
        },
      },
      "heapMemoryMax": Object {
        "avg": Object {
          "field": "jvm.memory.heap.max",
        },
      },
      "heapMemoryUsed": Object {
        "avg": Object {
          "field": "jvm.memory.heap.used",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "heapMemoryCommitted": Object {
            "avg": Object {
              "field": "jvm.memory.heap.committed",
            },
          },
          "heapMemoryMax": Object {
            "avg": Object {
              "field": "jvm.memory.heap.max",
            },
          },
          "heapMemoryUsed": Object {
            "avg": Object {
              "field": "jvm.memory.heap.used",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries without a service node name fetches memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "memoryUsedAvg": Object {
        "avg": Object {
          "script": Object {
            "lang": "painless",
            "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
          },
        },
      },
      "memoryUsedMax": Object {
        "max": Object {
          "script": Object {
            "lang": "painless",
            "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
          },
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "memoryUsedAvg": Object {
            "avg": Object {
              "script": Object {
                "lang": "painless",
                "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
              },
            },
          },
          "memoryUsedMax": Object {
            "max": Object {
              "script": Object {
                "lang": "painless",
                "source": "
    /*
      When no limit is specified in the container, docker allows the app as much memory / swap memory as it wants.
      This number represents the max possible value for the limit field.
    */
    double CGROUP_LIMIT_MAX_VALUE = 9223372036854771712L;

    String limitKey = 'system.process.cgroup.memory.mem.limit.bytes';

    //Should use cgropLimit when value is not empty and not equals to the max limit value.
    boolean useCgroupLimit = doc.containsKey(limitKey) && !doc[limitKey].empty && doc[limitKey].value != CGROUP_LIMIT_MAX_VALUE;

    double total = useCgroupLimit ? doc[limitKey].value : doc['system.memory.total'].value;

    double used = doc['system.process.cgroup.memory.mem.usage.bytes'].value;

    return used / total;
    ",
              },
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "exists": Object {
              "field": "system.process.cgroup.memory.mem.usage.bytes",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries without a service node name fetches non heap memory chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "nonHeapMemoryCommitted": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.committed",
        },
      },
      "nonHeapMemoryMax": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.max",
        },
      },
      "nonHeapMemoryUsed": Object {
        "avg": Object {
          "field": "jvm.memory.non_heap.used",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "nonHeapMemoryCommitted": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.committed",
            },
          },
          "nonHeapMemoryMax": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.max",
            },
          },
          "nonHeapMemoryUsed": Object {
            "avg": Object {
              "field": "jvm.memory.non_heap.used",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`metrics queries without a service node name fetches thread count chart data 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "threadCount": Object {
        "avg": Object {
          "field": "jvm.thread.count",
        },
      },
      "threadCountMax": Object {
        "max": Object {
          "field": "jvm.thread.count",
        },
      },
      "timeseriesData": Object {
        "aggs": Object {
          "threadCount": Object {
            "avg": Object {
              "field": "jvm.thread.count",
            },
          },
          "threadCountMax": Object {
            "max": Object {
              "field": "jvm.thread.count",
            },
          },
        },
        "date_histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "fixed_interval": "30s",
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "terms": Object {
              "agent.name": Array [
                "java",
                "opentelemetry/java",
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
